<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pg1title1"
            android:textAlignment="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/au1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pg1e1hint"
            android:padding="5dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ap1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pg1e2hint"
            android:padding="5dp"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/as1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:padding="8dp"
                android:text="@string/pg1signup"
                android:textSize="24sp" />

            <Button
                android:id="@+id/al1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:padding="8dp"
                android:text="@string/pg1login"
                android:textSize="24sp" />

            <Button
                android:id="@+id/showa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="SHOW A" />
        </LinearLayout>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id"
            android:autoLink="all"
            android:linksClickable="true"
            android:text="https://visitshopapp.page.link/explore"
            android:layout_gravity="center_horizontal"
            android:textColorLink="#0000ee"/>
    </LinearLayout>

    <View
        android:layout_width="400dp"
        android:layout_height="15dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp"
        android:background="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pg1title2"
        android:textAlignment="center"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/ou1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pg1e1hint"
        android:padding="5dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/op1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pg1e2hint"
        android:padding="5dp"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/os1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:padding="8dp"
            android:text="@string/pg1signup"
            android:textSize="24sp" />

        <Button
            android:id="@+id/ol1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:padding="8dp"
            android:text="@string/pg1login"
            android:textSize="24sp" />

        <Button
            android:id="@+id/showo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="SHOW O" />
    </LinearLayout>


</LinearLayout>