<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProduct">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="10dp"
            android:background="#6EDFF4"
            android:fontFamily="casual"
            android:padding="5dp"
            android:text="@string/addpheading"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">
            <Button
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:backgroundTint="#BEF1F8"
                android:elevation="55sp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/addpid"
                android:textColor="#000112"
                android:padding="5dp"
                android:textSize="15dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="10sp"
                android:id="@+id/pdcode"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">
            <Button
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:backgroundTint="#BEF1F8"
                android:elevation="55sp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/addpname"
                android:textColor="#000112"
                android:padding="5dp"
                android:textSize="15dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="10sp"
                android:id="@+id/pdname"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">
            <Button
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:backgroundTint="#BEF1F8"
                android:elevation="55sp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/addpcategory"
                android:textColor="#000112"
                android:padding="5dp"
                android:textSize="15dp" />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="10sp"
                android:id="@+id/pdcat"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">
            <Button
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:backgroundTint="#BEF1F8"
                android:elevation="55sp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/addpprice"
                android:textColor="#000112"
                android:padding="5dp"
                android:textSize="15dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="10sp"
                android:id="@+id/pdprice"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">
            <Button
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:backgroundTint="#BEF1F8"
                android:elevation="55sp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/addpdisc"
                android:textColor="#000112"
                android:padding="5dp"
                android:textSize="15dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="10sp"
                android:id="@+id/pddisc"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">
            <Button
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:backgroundTint="#BEF1F8"
                android:elevation="55sp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/addpqty"
                android:textColor="#000112"
                android:padding="5dp"
                android:textSize="15dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="10sp"
                android:id="@+id/pdqty"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">
            <Button
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:backgroundTint="#BEF1F8"
                android:elevation="55sp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/addpdate"
                android:textColor="#000112"
                android:padding="5dp"
                android:textSize="15dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="10sp"
                android:id="@+id/pddate"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pdsave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="48dp"

                android:layout_marginTop="12dp"
                android:layout_marginBottom="10dp"
                android:background="#6EDFF4"
                android:fontFamily="casual"
                android:padding="5dp"
                android:text="@string/pdsave"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/pddiscard"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="48dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="10dp"
                android:background="#6EDFF4"
                android:fontFamily="casual"
                android:padding="5dp"
                android:text="@string/pddiscard"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>